kubernetes/gateway-api-istio/003-gateway-api-extra/httproute-plain.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
  namespace: application
spec:

  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: production
      namespace: istio-system
      sectionName: http


  hostnames:
    - example.com

  rules:

    - backendRefs:
        - group: ""
          kind: Service
          name: your-application
          namespace: application
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
