kubernetes/gateway-api-istio/003-gateway-api-extra/httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-redirect-to-https
  namespace: application
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: production
      namespace: istio-system
      sectionName: http

  hostnames:
    - example.com

  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
      matches:
        - path:
            type: PathPrefix
            value: /
